--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     curl,
-    rvest
+    rvest,
+    RCurl,
+    tidyverse
 Depends: 
     tidyverse
 RoxygenNote: 7.2.1
