--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,9 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    doParallel,
+    doSNOW,
+    progress,
     curl,
     rvest,
     RCurl,
